# leta

./: README.md  docker-compose.yml  outgoing-smtp.json
backend/: Cargo.toml
backend/migration/src/: lib.rs
backend/src/: main.rs
backend/templates/emails/: reset-password.html  verify-email.html
frontend/: .eslintrc.cjs  package.json
frontend/src/lib/components/auth/: GoogleButton.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/auth/: +page.svelte
