[package]
name = "leta"
version = "0.0.0"
edition = "2021"
description = "Reserved name"
authors = ["Jacobtread"]
license = "MIT"
publish = false

[workspace]
members = [".", "migration"]

[dependencies]
axum = "^0.6"
hyper = { version = "^0.14", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
tower = "^0.4"
sailfish = "^0.6"
log = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
jsonwebtoken = "8"
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
argon2 = "0.5"
dotenvy = "0.15"
tower_governor = "0.0.4"
thiserror = "1"
validator = { version = "0.16", features = ["derive"] }

sea-orm = { version = "^0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }


[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = [
    "gzip",
    "console_appender",
    "rolling_file_appender",
    "compound_policy",
    "fixed_window_roller",
    "size_trigger",
]
